<resources>
    <string name="app_name">Asodo</string>
    <string name="app_name_cap">ASODO</string>
    <string name="zero">0</string>
    <string name="zerof">0.0</string>
    <string name="enable">Inschakelen</string>
    <string name="start">Start</string>
    <string name="end">Einde</string>
    <string name="default_ok">OK</string>
    <string name="continue_">Doorgaan</string>
    <string name="retry">Retry</string>
    <string name="cancel">Annuleren</string>
    <string name="undefined">\?\?\?</string>
    <string name="nvt">NVT</string>
    <string name="no_internet">Geen internet verbinding!</string>
    <string name="username">Gebruikersnaam</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_success">Login succesvol!</string>
    <string name="login_failed">Ongeldige gebruikersnaam/wachtwoord!</string>
    <string name="niet_geregistreerd">Niet Geregistreerd?</string>
    <string name="registreer">Registreer</string>
    <string name="passwords_not_match">Wachtwoorden komen niet overeen!</string>
    <string name="username_taken">Gebruikersnaam al in gebruik!</string>
    <string name="register_success">Succesvol geregistreerd!</string>
    <string name="Kenteken">Kenteken</string>
    <string name="al_geregistreerd">Al Geregistreerd?</string>
    <string name="login2">Login</string>
    <string name="confirm_password">Bevestig Password</string>
    <string name="welkom_gebruiker">Welkom Gebruiker!</string>
    <string name="active_trip_warning">U heeft een actieve rit!\n\nAls u uitlogt zal deze rit verloren gaan.</string>
    <string name="options_menu_settings">Opties</string>
    <string name="options_menu_logout">Logout</string>
    <string name="language">Taal</string>
    <string name="language_summary">Verander de taal van de app</string>
    <string name="language_default_value">Nederlands</string>
    <string-array name="language_entries">
        <item>Nederlands</item>
        <item>Engels</item>
    </string-array>
    <string-array name="language_values">
        <item name="Nederlands">Nederlands</item>
        <item name="Engels">Engels</item>
    </string-array>
    <string name="settings_cache_size_title">Aantal opgeslagen ritten</string>
    <string name="settings_cache_size_summary">Bepaal hoeveel ritten lokaal op de telefoon worden opgeslagen voor het gebruik van offline modus.</string>
    <string-array name="settings_cache_size_entries">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>Alles</item>
    </string-array>
    <string-array name="settings_cache_size_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>0</item>
    </string-array>
    <string name="settings_tracking_setting_title">Routetracking</string>
    <string name="settings_tracking_setting_summary">Bepaal hoe GPS u gaat ondersteunen tijdens uw ritten</string>
    <string-array name="settings_tracking_setting_entries">
        <item>Geen routetracking</item>
        <item>Bepaal alleen begin- en eindlocatie via GPS</item>
        <item>Volledige routetracking</item>
    </string-array>
    <string-array name="settings_tracking_setting_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="notification_title">Actieve rit</string>
    <string name="channel_name">Test content</string>
    <string name="channel_description">Test content</string>
    <string name="loading">Aan het laden…</string>
    <string name="calendar_tip">Selecteer 2 datums voordat u de pdf download</string>
    <string name="calendar_send">Stuur</string>
    <string name="end_route">Einde rit</string>
    <string name="confirm_km">Bevestig kilometerstand</string>
    <string name="route_description">Rit beschrijving:</string>
    <string name="route_km_hint">Kilometerstand</string>
    <string name="end_route_description_hint">Voeg een beschrijving toe</string>
    <string name="end_route_confirm">Bevestig</string>
    <string name="endcheck_confirm_km">Bevestig kilometerstand</string>
    <string name="route_load">Route laden…</string>
    <string name="route_checking">Startlocatie wordt bepaald…</string>
    <string name="route_error_gps">Uw huidige locatie kan niet worden bepaald.</string>
    <string name="route_activate_location">Activieer Locatie Services</string>
    <string name="route_locating_end_location">Eindlocatie wordt bepaald…</string>
    <string name="route_error_no_location">Uw huidige locatie kan niet worden bepaald.</string>
    <string name="route_activate_location_services">Activeer Locatie Services</string>
    <string name="route_travel_confirmed">Rit bezig</string>
    <string name="route_current_km_input">Afgelegde afstand:</string>
    <string name="gps_popup">GPS uitgeschakeld.\nKan locatie niet bepalen.</string>
    <string name="route_km">km</string>
    <string name="route_estimation" formatted="true">Afgelegde afstand: %.1f km</string>
    <string name="route_gps_disabled">GPS uitgeschakeld</string>
    <string name="route_cant_confirm_location">Uw huidige locatie kan niet worden bepaald.</string>
    <string name="route_end_route">Beëindig rit</string>
    <string name="route_city_begin">Vul beginstad in</string>
    <string name="route_city_end">Vul eindstad in</string>
    <string name="route_city_confirm">Bevestig</string>
    <string name="route_city_cityet">Vul een stad in</string>
    <string name="start_route">Start rit</string>
    <string name="start_route_confirm_km">Bevestig kilometerstand:</string>
    <string name="start_route_loading">Aan het laden…</string>
    <string name="start_route_">Start km input</string>
    <string name="start_route_business_trip">Zakelijke reis</string>
    <string name="start_route_personal_trip">Privé reis</string>
    <string name="start_route_home_work">Woon werk</string>
    <string name="start_route_start">Start rit</string>
    <string name="start_route_no_last_mileage">Kan laatste kilometerstand niet laden!</string>
    <string name="start_route_no_last_mileage_helper">Vul kilometerstand in</string>
    <string name="start_route_no_car">Geen auto voor rit geselecteerd!</string>
    <string name="start_route_mileage_lower">Fout: Kilometerstand lager dan laatste eindstand</string>
    <string name="mileage_no_number">Fout: Kilometerstand is geen nummer</string>
    <string name="mileage_lower_than_start">Fout: Kilometerstand lager dan beginstand</string>
    <string name="enter_city">Vul een stad in</string>
    <string name="stats_back">Terug</string>
    <string name="stats_statistics">Statistieken</string>
    <string name="activity_history_list_title" formatted="true">%s: %s - %s</string>
    <string name="activity_history_list_description" formatted="true">Afgelegde afstand: %d kilometers</string>
    <string name="activity_history_list_show_cache">Offline mode\nGeen netwerk beschikbaar</string>
    <string name="activity_history_list_refres_results">Ritten worden gesynchroniseerd</string>
    <string name="activity_history_list_detail_invalid_detail">Fout bij het laden van rit!</string>
    <string name="activity_history_list_detail_header_details">Rit details</string>
    <string name="activity_history_list_detail_header_description">Rit beschrijving</string>
    <string name="activity_history_list_detail_label_from">Van:</string>
    <string name="activity_history_list_detail_label_to">Naar:</string>
    <string name="activity_history_list_detail_label_start">Begin:</string>
    <string name="activity_history_list_detail_label_end">Eind:</string>
    <string name="activity_history_list_detail_label_yes">ja</string>
    <string name="activity_history_list_detail_label_no">nee</string>
    <string name="activity_history_list_detail_label_time_duration">Rit duur:</string>
    <string name="activity_history_list_detail_label_date">Datum:</string>
    <string name="activity_history_list_detail_label_mileage">Kilometerstanden</string>
    <string name="activity_history_list_detail_label_distance_driven">Afstand:</string>
    <string name="activity_history_list_detail_label_business_trip">Zakelijke reis:</string>
    <string name="activity_history_list_detail_label_bbCommuting">Woon werk:</string>
    <string name="activity_log_logo">Asodo</string>
    <string name="activity_main_start">Start nieuwe rit</string>
    <string name="activity_main_statistics">Ritten historie</string>
    <string name="activity_main_export">Exporteren</string>
    <string name="activity_main_active_trip">Open actieve rit</string>
    <string name="activity_export_business_personal">Zakelijke &amp; persoonlijke reizen</string>
    <string name="activity_export_business">Zakelijke reizen</string>
    <string name="activity_export_personal">Persoonlijke reizen</string>
    <string name="activity_export_no_two_dates">U heeft geen 2 datums geselecteerd</string>
    <string name="exporter_no_folder">Kan geen folder genereren</string>
    <string name="exporter_no_permission">Toegang geweigerd tot externe opslag</string>
    <string name="exporter_no_email_client">Er is geen email client geïnstalleerd</string>
    <string name="exporter_download_successful">PDF Download Successvol!</string>
    <string name="exporter_subject_message" formatted="true">Declaratie Overzicht  %s - %s</string>
    <string name="exporter_automated_message">Automated message from Asodo.</string>
    <string name="exporter_mail_description" formatted="true">\n%s\n%s\nKilometers gereden:      %d\nBeschrijving: %s</string>
    <string name="exporter_mail_no_description" formatted="true">\n%s\n%s\nKilometers gereden:      %d</string>
</resources>
