<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.loginscreen.RegActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/activity_log_logo"
        app:srcCompat="@drawable/logo" />
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:drawableLeft="@drawable/username"/>
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/password"
        />
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"/>
    <EditText
        android:id="@+id/edittext_Kenteken"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:hint="@string/Kenteken"
        android:drawableLeft="@drawable/kenteken"
        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/registreer"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/al_geregistreerd"
            android:textColor="#4D4D4D"/>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/login2"
            android:textColor="#0000FF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

    </LinearLayout>
</LinearLayout>